--- a/checkEP.ipynb
+++ b/checkEP.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numbers"
+    "import numbers\n",
+    "from functools import lru_cache"
    ]
   },
   {
@@ -66,6 +67,7 @@
     "        i -= 1\n",
     "    return M.extensions(i,subsets=[hyp,line]), i\n",
     "\n",
+    "@lru_cache(maxsize=None)",
     "def CheckEP(M):\n",
     "    '''\n",
     "    Takes as input a matroid and checks if it is EP.\n",
@@ -83,6 +85,7 @@
     "                return False, hyp, line\n",
     "    return True, []\n",
     "\n",
+    "@lru_cache(maxsize=None)",
     "def RecursiveCheckEP(M,depth):\n",
     "    '''\n",
     "    The recursive function.\n",
