--- a/checkEP.ipynb
+++ b/checkEP.ipynb
@@ -67,7 +67,7 @@
     "        i -= 1\n",
     "    return M.extensions(i,subsets=[hyp,line]), i\n",
     "\n",
-    "@lru_cache(maxsize=None)",
+    "@lru_cache(maxsize=None)\n",
     "def CheckEP(M):\n",
     "    '''\n",
     "    Takes as input a matroid and checks if it is EP.\n",
@@ -85,7 +85,7 @@
     "                return False, hyp, line\n",
     "    return True, []\n",
     "\n",
-    "@lru_cache(maxsize=None)",
+    "@lru_cache(maxsize=None)\n",
     "def RecursiveCheckEP(M,depth):\n",
     "    '''\n",
     "    The recursive function.\n",
