--- a/checkGP.ipynb
+++ b/checkGP.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numbers"
+    "import numbers\n",
+    "from functools import lru_cache"
    ]
   },
   {
@@ -67,6 +68,7 @@
     "        i -= 1\n",
     "    return M.extensions(i,subsets=[f1,f2]), i\n",
     "\n",
+    "@lru_cache(maxsize=None)\n",
     "def CheckGP(M):\n",
     "    '''\n",
     "    Takes as input a matroid and checks if it is 1-GP.\n",
@@ -86,6 +88,7 @@
     "                return False, f1, f2\n",
     "    return True, []\n",
     "\n",
+    "@lru_cache(maxsize=None)\n",
     "def RecursiveCheckGP(M,depth):\n",
     "    '''\n",
     "    The recursive function.\n",
