--- a/checkEP.ipynb
+++ b/checkEP.ipynb
@@ -84,7 +84,7 @@
     "                return False, hyp, line\n",
     "    return True, []\n",
     "\n",
-    "@lru_cache(maxsize=None)\n",
+    "@lru_cache(maxsize=256)\n",
     "def RecursiveCheckEP(M,depth):\n",
     "    '''\n",
     "    The recursive function.\n",
