--- a/checkGP.ipynb
+++ b/checkGP.ipynb
@@ -87,7 +87,7 @@
     "                return False, f1, f2\n",
     "    return True, []\n",
     "\n",
-    "@lru_cache(maxsize=None)\n",
+    "@lru_cache(maxsize=256)\n",
     "def RecursiveCheckGP(M,depth):\n",
     "    '''\n",
     "    The recursive function.\n",
